updated ci/cd process, ignored public dir

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
     </nav>
 
     <article>
-        <div><h1>Gary Feng: From Data to Development</h1><p>I hold a Bachlore of Science in Statistics from University at Buffalo, SUNY. I entered the workfield as a opthamologist technician, and have been learning backend development via Bootdev. I went through a lot of the courses and still going. Currently I am working on an RSS aggregator as well as this website. This website currently does not fully support markdown.</p><h2>Skill/Tech stack</h2><p>Programming Languages: Go, Python, JavaScript, Scala</p><p>Tools: Git, Docker, Kubernetes</p><p>Frameworks: None</p><p>Statistical Tools: R, Minitab, Excel</p></div>
+        <div><h1>Gary Feng: From Data to Development</h1><p>I hold a Bachlore of Science in Statistics from University at Buffalo, SUNY. I entered the workfield as a opthamologist technician, and have been learning backend development via Bootdev. I went through a lot of the courses and still going. Currently I am building an <a href="https://github.com/Chichigami/EMR">Electronic Medical Record web app</a> with the GoTTH stack.</p><p>Recently finished course: CI/CD
+Currently on: Docker, Kubernetes, AWS, Cryptography</p><h2>Skill/Tech stack</h2><p>Programming Languages: Go, Python, JavaScript, Scala, HTML/CSS</p><p>Tools: Git, Docker, Kubernetes</p><p>Frameworks: Gin, Templ, Tailwind, HTMX (GoTTH)</p><p>Statistical Tools: R, Minitab, Excel</p></div>
     </article>
 
     <footer class="footer">
